# ChangeLog for app-vim/rails
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Oct 2010; James Rowe <jnrowe@gmail.com> rails-4.3.ebuild:
  Keyworded amd64.

*rails-4.3 (18 Sep 2010)

  18 Sep 2010; James Rowe <jnrowe@gmail.com> +rails-4.3.ebuild:
  Version bump [#177].

  15 Apr 2010; James Rowe <jnrowe@gmail.com> -rails-4.1.ebuild,
  rails-4.2.ebuild:
  Keyworded x86.

  15 Apr 2010; James Rowe <jnrowe@gmail.com> rails-4.2.ebuild:
  Keyworded amd64.

*rails-4.2 (16 Mar 2010)

  16 Mar 2010; James Rowe <jnrowe@gmail.com> +rails-4.2.ebuild:
  Version bump [5a8].

  20 Jan 2010; James Rowe <jnrowe@gmail.com> -rails-4.0.ebuild,
  rails-4.1.ebuild:
  Keyworded x86.

  20 Jan 2010; James Rowe <jnrowe@gmail.com> rails-4.1.ebuild:
  Keyworded amd64.

*rails-4.1 (21 Dec 2009)

  21 Dec 2009; James Rowe <jnrowe@gmail.com> +rails-4.1.ebuild:
  Version bump [427].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> -rails-3.4.ebuild,
  rails-4.0.ebuild:
  Keyworded x86, removed stale version.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> rails-4.0.ebuild:
  Keyworded amd64.

*rails-4.0 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +rails-4.0.ebuild:
  Version bump [c19].

  01 Aug 2009; James Rowe <jnrowe@gmail.com> rails-3.4.ebuild:
  Keyworded amd64.

  28 Jul 2009; James Rowe <jnrowe@gmail.com> rails-3.4.ebuild:
  Keyworded x86.

  28 Jul 2009; James Rowe <jnrowe@gmail.com> rails-3.4.ebuild:
  Keyworded ~amd64.

*rails-3.4 (13 Jun 2009)

  13 Jun 2009; James Rowe <jnrowe@gmail.com> +rails-3.4.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
