@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST rails-4.2.zip 61508 RMD160 7759ef99250c3d914c89b6334b1558833364ffc1 SHA1 bdce1012d590fa148b64671cca0d3bed7dac620f SHA256 74882e4e17ec057ec2d6a601df1005eca57ae60f519d3c546676ec2d521fd768
 DIST rails-4.3.zip 62381 RMD160 2af859797b994e01eada32e544c76c46b7c4ea67 SHA1 c7f361d168cc65c1c2f9b0751843034e8a82cee9 SHA256 4d9bf826803f1aa861a72a1981e831a8cd329c47cc035ab2651203a379800f32
-EBUILD rails-4.2.ebuild 505 RMD160 3c8e7e1ab80ba8bb78b1e422d93fb91ecf486f13 SHA1 3444c0ce0de18909358a9b80cbc3e560fb7656ff SHA256 dc17e90c70acfa4bd3e808c83fceaf05b78636c37958727177eba53d055e8fcf
-EBUILD rails-4.3.ebuild 506 RMD160 f6fa58939e1043afbc9760e6213ea0ac7162c0e0 SHA1 1458e8fc78bce41528fd5155b361e308bc7ff9b4 SHA256 98d9ee221184f7d0665fa733f3c18d9958c2557482ea3ce008ea326219ab6371
-MISC ChangeLog 1609 RMD160 13dc371177298cff07762adc261b7184d069a85d SHA1 a6add1d11ff5ef38f31878c8340db07285a33981 SHA256 b46d3a020a8c2bc87a009b9b27dd6c866adc2f0149c6e76eda2377fbcc2d60db
+EBUILD rails-4.3.ebuild 505 RMD160 6dc4e31e6ab85c0afeb1fee8a7b485e5bee58149 SHA1 f80af9721d25cfeb73d64e8eeaeaac8af2b93491 SHA256 5addf705bf6ca2dad3861b13d44b2f0f8bcb32e44fa72453a6fc21d26f3b3d6a
+MISC ChangeLog 1711 RMD160 9c30c61db087fd48fad960d0c11da1d9cae168ee SHA1 770c32f179cea1161220a6db214baab32a0f3da1 SHA256 1f92da9d7b1981dc314b5b914745284661cc84322967588f090359f3795453d2
 MISC metadata.xml 1012 RMD160 750e9c515b2372b44101988ee8e2972a72056992 SHA1 f295bb28f5ab056c8c5044ca888771fbb179a121 SHA256 08d1b5d8bcc6e846910d10bfcf2324adbb6056621b4bf83c3f50a61d4a7e4e80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAky8zXoACgkQzJrj3cAXR0mdvQCfYpJkte+j4DoKNXmarZw4WhUi
-9NoAoJbrJzVhlaeBNcXuUKzRnyp68DEZ
-=qz3x
+iEYEARECAAYFAky81YYACgkQzJrj3cAXR0lMpACgi5q+iHHWQgOV1B4ygJx6mjsF
+w70AnAmiu3ShyHWwZUBMxwqssf2vDtti
+=Fnie
 -----END PGP SIGNATURE-----
