@@ -1,22 +1,0 @@
-app-arch/unzip || ( >=app-editors/vim-7.0 >=app-editors/gvim-7.0 )
-|| ( >=app-editors/vim-7.0 >=app-editors/gvim-7.0 )
-0
-http://www.vim.org/scripts/download_script.php?src_id=12622 -> rails-4.2.zip
-
-http://www.vim.org/scripts/script.php?script_id=1567
-vim
-vim plugin: RoR - easy file navigation, enhanced syntax highlighting
-amd64 x86
-vim-doc vim-plugin
-
-
-
-
-2
-
-install postinst postrm
-
-
-
-
-
