@@ -1,4 +1,3 @@
-REM 2010-10-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-vim/rails-4.3 %a
 REM 2010-10-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/clevercss-0.1 %a
 REM 2010-10-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/clevercss-0.1 %a
 REM 2010-10-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/restview-1.2.2 %a
